tests/errors/semantics/struct_init_list_type_mismatch.odl
main :: () -> void {
    foo_t :: struct {
        a := 5;
        b := false;
        c: f64 = 32.5;
    };

    foo := foo_t.{a: false};

    printint(foo.a);
    println();
};